[package]
version = "0.0.1"
name = "aisdb_receiver"
authors = [ "MERIDIAN // Matt Smith matthew.smith@dal.ca",]
edition = "2021"
description = "Network dispatcher client and logging server"
homepage = "https://aisdb.meridian.cs.dal.ca/"

[[bin]]
name = "client"

[[bin]]
name = "server"


[dependencies]
socket2 = { version = "0.4.7", features=["all"] }

[dependencies.pico-args]
version = "0.5.0"
features = [ "eq-separator",]

[profile.release]
lto = true
opt-level = "z"
strip = true

