[package]
name = "mproxy-proxy"
version = "0.1.0"
edition = "2021"

license = "MIT"
readme = "../readme.md"
repository = "https://github.com/matt24smith/mproxy-dispatcher"
description = "MPROXY: Proxy. Forward TCP, UDP, or Multicast endpoints to a downstream UDP socket address."

[features]
tls = ["dep:rustls", "dep:webpki-roots"]

[dependencies]
mproxy-socket_dispatch = {path = "../socket_dispatch", version = "0.1.0"}
mproxy-client = {path = "../client", version = "0.1.0"}
mproxy-server = {path = "../server", version = "0.1.0"}

rustls = {version = "0.20", optional = true}
webpki-roots = {version = "0.22", optional = true}

[dependencies.pico-args]
version = "0.5.0"
features = [ "eq-separator",]

[dev-dependencies]
mproxy-client = {path = "../client"}
mproxy-server = {path = "../server"}
testconfig = {path = "../testconfig"}
