[package]
name = "mproxy-reverseproxy"
version = "0.1.0"
edition = "2021"

license = "MIT"
readme = "../readme.md"
repository = "https://github.com/matt24smith/mproxy-dispatcher"
description = "MPROXY: Reverse-proxy. Forward upstream TCP and/or UDP endpoints to downstream listeners."

[dependencies]
mproxy-socket_dispatch = {path = "../socket_dispatch", version = "0.1.0"}
mproxy-client = {path = "../client", version = "0.1.0"}
mproxy-server = {path = "../server", version = "0.1.0"}
mproxy-proxy = {path = "../proxy", version = "0.1.0"}

[dependencies.pico-args]
version = "0.5.0"
features = [ "eq-separator",]

[dev-dependencies]
mproxy-client = {path = "../client"}
testconfig = {path = "../testconfig"}
