[package]
name = "mproxy-server"
version = "0.1.8"
edition = "2021"

license = "MIT"
readme = "../readme.md"
repository = "https://github.com/matt24smith/mproxy-dispatcher"
description = "MPROXY: Server. Listen for incoming UDP messages and log to file."
documentation = "https://docs.rs/mproxy-server/"

[lib]

[[bin]]
name = "mproxy-server"

[dependencies.pico-args]
version = "0.5.0"
features = [ "eq-separator",]

[dependencies.net2]
version = "0.2"

[dev-dependencies]
mproxy-client = {path = "../client"}
testconfig = {path = "../testconfig"}
